--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <script src="js/1-variables.js"></script>
+    <script src="js/2-functions.js"></script>
+    <script src="js/3-datatypes.js"></script>
+    <script src="js/4-arrays.js"></script>
 </body>
 </html>
