--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <script src="js/2-functions.js"></script>
     <script src="js/3-datatypes.js"></script>
     <script src="js/4-arrays.js"></script>
+    <script src="js/5-objects.js"></script>
+    <script src="js/6-operatory.js"></script>
 </body>
 </html>
