--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <script src="js/4-arrays.js"></script>
     <script src="js/5-objects.js"></script>
     <script src="js/6-operatory.js"></script>
+    <script src="js/7-conditions.js"></script>
+    <script src="js/8-loops.js"></script>
 </body>
 </html>
